# AutoGSE

./: .gitignore  AutoGSE_Product_Requirement_Document.md  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
assets/: app.manifest
installer/: ATTRIBUTION.txt  autogse.iss
src/: acw.rs  appid.rs  appid_prompt.rs  backup.rs  cli.rs  credentials.rs  discovery.rs  elevate.rs  error.rs  goldberg.rs  index.rs  ini_patch.rs  log.rs  login_prompt.rs  main.rs  manifest.rs  mods.rs  mutex_engine.rs  notify.rs  output.rs  pe.rs  preferences.rs  process_lock.rs  registry.rs  sanitize.rs  shortcut.rs  steam_api.rs  steamclient_mode.rs  update_check.rs  version_info.rs
tests/: cli_smoke.rs  concurrent_lock.rs
