[package]
name = "autogse"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.2", features = ["derive"] }
dunce = "1.0.5"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
strsim = "0.11.1"
tempfile = "3.27.0"
thiserror = "2.0.19"
ureq = { version = "3.3.0", default-features = false, features = ["native-tls", "gzip", "json"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_IO", "Win32_Security", "Win32_Security_Cryptography", "Win32_System_Console", "UI_Notifications", "Data_Xml_Dom", "Win32_System_WinRT", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Storage_EnhancedStorage"] }

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
